--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -44,15 +44,15 @@ jobs:
         docker-compose up -d 
         cd -
         pwd
-    #- name: Run black --check .
-    #  run: black --check . --exclude _actions
-    #- name: Test with pytest
-    #  run: |
-    #    cd unittests
-    #    pwd
-    #    python3 -m pip install pytest
-    #    python3 -m pip install pytest-cov
-    #    python3 -m pytest --cov=../ --cov-report=xml
-    #    ls
+    - name: Run black --check .
+      run: black --check . --exclude _actions
+    - name: Test with pytest
+      run: |
+        cd unittests
+        pwd
+        python3 -m pip install pytest
+        python3 -m pip install pytest-cov
+        python3 -m pytest --cov=../ --cov-report=xml
+        ls
     
    
