--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -4,9 +4,8 @@
 name: Python package
 
 on:
-  #pull_request:
-  push:
-    branches: [ main ]
+  pull_request:
+    branches: [ main,dev ]
 
 jobs:
   build:
