--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -49,9 +49,17 @@ jobs:
       run: |
         cd unittests
         pwd
-        python3 -m pip install pytest
         python3 -m pip install pytest-cov
         python3 -m pytest --cov=../ --cov-report=xml
         ls
-    
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        directory: ./unittests
+        env_vars: OS,PYTHON
+        fail_ci_if_error: true
+        flags: unittests
+        name: codecov-umbrella
+        # path_to_write_report: ./coverage/codecov_report.txt
+        verbose: true    
    
